tests/http/snapshots/http__v2_admin__join_without_key.snap
---
source: tests/http/v2_admin.rs
expression: "request(Method::PUT, CHANNEL).send().await"
---
PUT /api/v2/admin/channels/44444
status: 401 Unauthorized
content-type: application/problem+json
---
{
  "code": "unauthorized",
  "status": 401,
  "title": "The API key is missing or wrong"
}
