tests/http/snapshots/http__v2_admin__leave_needs_twitch.snap
---
source: tests/http/v2_admin.rs
expression: "request(Method::DELETE, CHANNEL).admin_key().send().await"
---
DELETE /api/v2/admin/channels/44444
status: 503 Service Unavailable
content-type: application/problem+json
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "Twitch cannot be queried yet"
}
