tests/http/snapshots/http__v2_admin__opt_out_without_key.snap
---
source: tests/http/v2_admin.rs
expression: "request(Method::PUT, CHANNEL_OPT_OUT).send().await"
---
PUT /api/v2/admin/channels/11111/opt-out
status: 401 Unauthorized
content-type: application/problem+json
---
{
  "code": "unauthorized",
  "status": 401,
  "title": "The API key is missing or wrong"
}
